[package]
name = "medman"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
walkdir = "2.3.2"
id3 = "1.4.0"
json = "0.12.4"
serde = "1.0.147"
serde_json = "1.0.89"
bincode = "1.3.3"
smartcore = {version = "0.2.1", features=["serde"]}